--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 }
     
     .container .btn {
+  position:absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -221,7 +222,7 @@
   <source src="Video_2.mp4" alt="Metrohacks">
   </video>
   
-  <div class="row" style="display:inline-block;">
+  <div class="w3-row" style="display:inline-block;">
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register</button>
     
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">Sponsor</button>
