--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
 </div>
 
 
-<div class="video-container">
+<div class="container">
     
-    <video class="responsive" autoplay="" muted="" loop="">
+    <video class="responsive" autoplay muted loop>
   <source src="Video_2.mp4" alt="Metrohacks">
   </video>
   
