--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 }
     
     .container .btn {
-  position:absolute;
+  position:relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -216,7 +216,7 @@
 </div>
 
 
-<div class="container">
+<div class="video-container">
     
     <video class="responsive" autoplay muted loop>
   <source src="Video_2.mp4" alt="Metrohacks">
