--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   <div style="display:inline-block;">
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register</button>
     
-  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">Sponsor</button>
+  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Sponsor</button>
     </div>
 </div>
 <!-- Work Row -->
@@ -779,8 +779,8 @@ html {
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   font-family:courier;
   font-weight:bold;
   font-size: 25px;
@@ -789,6 +789,7 @@ html {
   cursor: pointer;
   border-radius: 10px;
   text-align: center;
+  display: inline-block;
 }
 
 .video-container .btn:hover {
