--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
   </video>
   
   <div style="display:inline-block;">
-  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register</button>
+  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">Register</button>
     
-  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Sponsor</button>
+  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">Sponsor</button>
     </div>
 </div>
 <!-- Work Row -->
