--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
   <source src="Video_2.mp4" alt="Metrohacks">
   </video>
   
-  <div style="display:inline-block;">
+  <div style="display:inline-block; width:100%; margin:auto;">
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot" style="align:left;">Register</button>
     
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot" style="align:right;">Sponsor</button>
