--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
 <div class="video-container">
     
-    <video class="responsive" style="max-width:100%; height:auto;" autoplay muted loop>
+    <video class="responsive" style="max-width:100%; max-height:100%;" autoplay muted loop>
   <source src="Video_2.mp4" alt="Metrohacks">
   </video>
   
