--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   <div style="display:inline-block; width:100%; margin:auto;">
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot" >Register</button>
     
-  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot" class="bot1" >Sponsor</button>
+  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot1" >Sponsor</button>
     </div>
 </div>
 <!-- Work Row -->
@@ -758,6 +758,7 @@ html {
     
   .video-container .bot1 {
  position: absolute;
+             right:25px;
   top: 55%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -775,6 +776,7 @@ html {
 }
 .video-container .bot {
  position: absolute;
+             left: 25px;
   top: 90%;
   left: 50%;
   transform: translate(-50%, -50%);
