--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   <div style="display:inline-block; width:100%; margin:auto;">
   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot" >Register</button>
     
-  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot1" >Sponsor</button>
+  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot" >Sponsor</button>
     </div>
 </div>
 <!-- Work Row -->
@@ -756,7 +756,7 @@ html {
  
 
     
-  .video-container .bot1 {
+  .video-container .btn {
  position: absolute;
              right:25px;
   top: 55%;
