--- a/index.html
+++ b/index.html
@@ -216,16 +216,13 @@
 </div>
 
 
-<div class="video-container">
+<div class="video-container" style="margin:0;">
     
     <video class="responsive" style="max-width:100%; max-height:100%;" autoplay muted loop>
   <source src="Video_2.mp4" alt="Metrohacks">
   </video>
   
   <div style="display:inline-block; width:100%; margin:auto;">
-  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot" >Register</button>
-    
-  <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot" >Sponsor</button>
     </div>
 </div>
 <!-- Work Row -->
