--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 </div>
 
 
-<div class="video-container" style="margin:0;">
+<div class="container" >
     
     <video class="responsive" style="max-width:100%; max-height:100%;" autoplay muted loop>
   <source src="Video_2.mp4" alt="Metrohacks">
