--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     body{margin:0;}
     .container img{
   max-width: 100%;
-  height:auto;
+  min-height:auto;
   
 }
 
@@ -216,9 +216,9 @@
 </div>
 
 
-<div class="container" >
+<div class="video-container" >
     
-    <video class="responsive" style="max-width:100%; max-height:100%;" autoplay muted loop>
+    <video class="responsive" style="max-width:100%; min-height:auto;" autoplay muted loop>
   <source src="Video_2.mp4" alt="Metrohacks">
   </video>
   
