--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 
 <html><head>
 
-<title>Metroacks</title>
+<title>MetroHacks</title>
 
 <meta charset="UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans" rel="stylesheet"> 
     <link rel="stylesheet" href="style.css">
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -219,7 +219,7 @@
 <div class="video-container" >
     
     <video class="responsive" style="max-width:100%; min-height:auto;" autoplay muted loop>
-  <source src="Video_2.mp4" alt="Metrohacks">
+  <source src="MetroHacksNew/MetroHacksLogoLoop.mp4" alt="Metrohacks">
   </video>
   
   <div style="display:inline-block; width:100%; margin:auto;">
