--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ var countdownfunction = setInterval(function() {
           <h2>Jack McCoy</h2>
       </div>
       <div class="w3-container" modal-body" style="font-family:courier; color:black;">
-          <p>Hey, I'm Jack McCoy. I'm a Junior at Cape Cod Academy where I am on the varsity Cross Country and Sailing teams, as well as the president of both the Pink Ribbon and Human Rights clubs. My favorite hobbies are working on various electronics projects, running my clothing brand, playing video games (of course), and making short documentaries (the most notable being one with WHOI and NASA.</p>
+          <p>Hey, I'm Jack McCoy. I'm a Junior at Cape Cod Academy where I am on the varsity Cross Country and Sailing teams, as well as the president and co-president of both the Pink Ribbon and Human Rights clubs, respectively. My favorite hobbies are working on various electronics projects, running my clothing brand, playing video games (of course), and making short documentaries (the most notable being one with WHOI and NASA.</p>
       </div>
     </div>
   </div>
