--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
 </div>
 <!-- Work Row -->
 
-<div class="w3-row-padding w3-padding-64 w3-theme-l1" id="about">
+<div class="w3-row-padding w3-padding-64 w3-theme-l1 biggerfont" id="about">
 
-<div id="aboutinformation"><h2><center>About Metrohacks</center></h2></div>
+<div id="aboutinformation" style="biggerfont"><h2><center>About Metrohacks</center></h2></div>
 
     <center>
-<p style="font-family:courier; font-size:150%;">MetroHacks is biggest the  high school hackathon, or tech gathering and competition, in New England. For 24 hours, learn about new technology, talk to industry professionals, meet up with friends, and make new ones. Participate in workshops, learn from speeches, and work with experts from companies like , Google, and Red Hat. High school students ages 13-18 can come, regardless of experience. The event is completely free, and meals are provided for all participants.</p>
+<p style="font-size:150%; smallerfont">MetroHacks is biggest the  high school hackathon, or tech gathering and competition, in New England. For 24 hours, learn about new technology, talk to industry professionals, meet up with friends, and make new ones. Participate in workshops, learn from speeches, and work with experts from companies like , Google, and Red Hat. High school students ages 13-18 can come, regardless of experience. The event is completely free, and meals are provided for all participants.</p>
     </center>
     <div class="w3-row-padding w3-padding-64 w3-theme-l1 center" id="about"></div>
     
@@ -383,7 +383,7 @@ var countdownfunction = setInterval(function() {
         
         <!-- Sponsors and Partners Container -->    
 
-<div class="w3-container w3-padding-64 w3-center biggerfont" id="sponsors">
+<div class="w3-container w3-padding-64 w3-center smallerfont" id="sponsors">
 
        <h1>Sponsors and Donors</h1>
 
