--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 <div class="video-container" >
     
     <video class="responsive" style="max-width:100%; min-height:auto;" autoplay muted loop>
-  <source src="MetroHacksNew/MetroHacksLogoLoop.mp4" alt="Metrohacks">
+  <source src="MetroHacksLogoLoop.mp4" alt="Metrohacks">
   </video>
   
   <div style="display:inline-block; width:100%; margin:auto;">
