--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
 <div class="w3-row-padding w3-padding-64 w3-theme-l1 biggerfont" id="about">
 
-<div id="aboutinformation" style="biggerfont,font-size:200%><p><center>About Metrohacks</center></p></div>
+<div id="aboutinformation" style="smallerfont,font-size:200%><p><center>About Metrohacks</center></p></div>
 
     <center>
 <p style="font-size:150%; smallerfont">MetroHacks is biggest the  high school hackathon, or tech gathering and competition, in New England. For 24 hours, learn about new technology, talk to industry professionals, meet up with friends, and make new ones. Participate in workshops, learn from speeches, and work with experts from companies like , Google, and Red Hat. High school students ages 13-18 can come, regardless of experience. The event is completely free, and meals are provided for all participants.</p>
@@ -340,7 +340,7 @@ var countdownfunction = setInterval(function() {
    <h2>Metrohacks IV Coming Soon!</h2>
     <center>
         
-        <p class="w3-container w3-padding-32" id="countdown" style="font-size:30px; font-family:courier;"></p>
+        <p class="w3-container w3-padding-32" id="countdown" style="font-size:30px; smallerfont></p>
         <button onclick="window.location.href = 'https://google.com';" class="w3-button w3-xlarge w3-theme w3-hover-deep-purple" title="Prospectus">Sponsor</button>
        
     </center>
