--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   outline: none;
   text-size: 150%;
   transition: 0.4s;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .active, .accordion:hover {
@@ -94,7 +95,7 @@
 .button{
   text-align: center; 
   font-style: italic;
-  font-family: "arial", Times, serif;
+  font-family: 'Montserrat', sans-serif;;
 }
     
     .row {
@@ -139,7 +140,7 @@
   -ms-transform: translate(-50%, -50%);
   background-color: white;
   color: black;
-  font-family:courier;
+  font-family: 'Montserrat', sans-serif;
   font-weight:bold;
   font-size: 25px;
   padding: 25px 50px;
