--- a/index.html
+++ b/index.html
@@ -213,14 +213,7 @@
 
 
 <!-- Image Header -->  
- <div id="StayFocusd-infobar" style="display:none;">
-    <img src="chrome-extension://laankejkbhbdhmipfmgcngdelahlfoji/common/img/eye_19x19_red.png">
-    <span id="StayFocusd-infobar-msg"></span>
-    <span id="StayFocusd-infobar-links">
-        <a id="StayFocusd-infobar-never-show">hide forever</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-        <a id="StayFocusd-infobar-hide">hide once</a>
-    </span>
-</div>
+
 
 
 <div class="video-container" >
@@ -238,9 +231,9 @@
 
 <p style="smallerfont,font-size:200%"><center>About Metrohacks</center></p>
 
-    <center>
-<p style="font-size:150%; smallerfont">MetroHacks is biggest the  high school hackathon, or tech gathering and competition, in New England. For 24 hours, learn about new technology, talk to industry professionals, meet up with friends, and make new ones. Participate in workshops, learn from speeches, and work with experts from companies like , Google, and Red Hat. High school students ages 13-18 can come, regardless of experience. The event is completely free, and meals are provided for all participants.</p>
-    </center>
+    
+<p style="font-size:150%, smallerfont"><center>MetroHacks is biggest the  high school hackathon, or tech gathering and competition, in New England. For 24 hours, learn about new technology, talk to industry professionals, meet up with friends, and make new ones. Participate in workshops, learn from speeches, and work with experts from companies like , Google, and Red Hat. High school students ages 13-18 can come, regardless of experience. The event is completely free, and meals are provided for all participants.</center></p>
+ 
     <div class="w3-row-padding w3-padding-64 w3-theme-l1 center" id="about"></div>
     
 
