--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
 <div class="video-container" >
     
-    <video class="responsive" style="max-width:100%; min-height:auto;" autoplay muted loop>
+    <video class="responsive" style="max-width:100%; height:auto;" autoplay muted loop>
   <source src="MetroHacksLogoLoop.mp4" alt="Metrohacks">
   </video>
   
