--- a/index.html
+++ b/index.html
@@ -459,8 +459,9 @@ var countdownfunction = setInterval(function() {
     </div>
     <!-- Team Bios Container -->  
 
-        <div class="w3-container w3-padding-64 w3-theme-l1 w3-center" id="team">
-           <h1> Team Bios </h1>
+        <div class="w3-container w3-padding-64 w3-theme-l1 w3-center biggerfont" id="team">
+    <p style="biggerfont"><font size="6"><center>Team Bios</center></font></p>
+
             
             
             <div class="w3-container">
