--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     .biggerfont {
   font-family: 'Staatliches', cursive;
 }
-    body{margin:0;}
+    body{
+        margin:0;
+ 
+    }
     .container img{
   width: 100%;
   min-height:100%;
@@ -1025,8 +1028,16 @@ html {
 }
 
 .modal-body {padding: 2px 16px;}
-                       
- body { margin:0; }
+    .video-container{
+  
+          height: 50%;
+    }
+    
+ body 
+    { 
+          margin:0; 
+          height: 100%;
+    }
 .video-container img {
   width: 100%;
   min-height: 100%;
