--- a/index.html
+++ b/index.html
@@ -227,9 +227,11 @@
     <video class="responsive" style="max-width:100%; height:auto;" autoplay muted loop>
   <source src="MetroHacksLogoLoop.mp4" alt="Metrohacks">
   </video>
+<div class="buttoning">
    <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register for MetroHacks Women<sup>2</sup></button>
       <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot"> for MetroHacks Women<sup>2</sup></button>
-        </div>
+    </div>
+    </div>
     </div>
 </div>
 <!-- Work Row -->
@@ -1031,6 +1033,9 @@ html {
     .video-container{
   
           height: 50%;
+    }
+    .buttoning{
+        height: 50%;
     }
     
  body 
