--- a/index.html
+++ b/index.html
@@ -695,8 +695,8 @@ margin: 0 auto;
 
 
 #button .btn {
-  position: absolute;
-
+  position: relative;
+top:50%;
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -713,7 +713,7 @@ margin: 0 auto;
 }
 
 #button .bot {
-  position: absolute;
+  position: relative;
   top: 20%;
   left: 50%;
   transform: translate(-90%, -50%);
