--- a/index.html
+++ b/index.html
@@ -228,8 +228,10 @@
   <source src="MetroHacksLogoLoop.mp4" alt="Metrohacks">
   </video>
 <div class="buttoning">
+    <div class="container">
    <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register for MetroHacks Women<sup>2</sup></button>
       <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot"> for MetroHacks Women<sup>2</sup></button>
+    </div>
     </div>
     </div>
     </div>
@@ -1135,7 +1137,7 @@ function setPlaySpeed() {
   vid.playbackRate = 0.5;
 } 
     
-    
+    x
 </script>
 
 
