--- a/index.html
+++ b/index.html
@@ -1038,12 +1038,14 @@ html {
     }
     .buttoning{
         height: 10%;
+        width:30%;
     }
     
  body 
     { 
           margin:0; 
           height: 100%;
+        width:100%;
     }
 .video-container img {
   width: 100%;
