--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 <div class="buttoning">
  
    <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register for MetroHacks Women<sup>2</sup></button>
-      <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot"> for MetroHacks Women<sup>2</sup></button>
+      <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">Sponsor</button>
     </div>
   </div>
     
@@ -702,8 +702,7 @@ margin: 0 auto;
   
 top:50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
+
   background-color: black;
   color: white;
   font-family:courier;
@@ -717,10 +716,9 @@ top:50%;
 }
 
 #button .bot {
-  top: 20%;
+  top: 50%;
   left: 50%;
-  transform: translate(-90%, -50%);
-  -ms-transform: translate(-50%, -50%);
+ 
   background-color: black;
   color: white;
   font-family:courier;
