--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
   <source src="MetroHacksLogoLoop.mp4" alt="Metrohacks">
   </video>
   
-<div class="buttoning">
+<div class="buttons">
  
-   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="btn">Register for MetroHacks Women<sup>2</sup></button>
-      <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot">Sponsor</button>
+   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot w3-hover-deep-purple">Register for MetroHacks Women<sup>2</sup></button>
+      <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot w3-hover-deep-purple">Sponsor</button>
     </div>
   </div>
     
