--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
   
 <div class="buttons">
  
-   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot w3-hover-deep-purple">Register for MetroHacks Women<sup>2</sup></button>
-      <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot w3-hover-deep-purple">Sponsor</button>
+   <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot w3-hover-deep-purple">Register</button>
+     
     </div>
   </div>
     
