--- a/index.html
+++ b/index.html
@@ -776,8 +776,8 @@ html {
   outline: 0;
   display: inline-block;
   padding: 8px;
-  color: white;
-  background-color: #000;
+  color: black;
+  background-color: white;
   text-align: center;
   cursor: pointer;
   width: 100%;
