--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
   <source src="MetroHacksLogoLoop.mp4" alt="Metrohacks">
   </video>
   
-<div class="buttoning">
+<div class="btn">
  
    <button onclick="window.location.href = 'https://metrohacks1.typeform.com/to/mk0kmk';" class="bot w3-hover-deep-purple">Register</button>
      
